[project]
name = "blackjack"
version = "0.1.0"
description = "Juego de blackjack en Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
blackjack = "blackjack.gui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
